GNOME Bugzilla – Bug 729649
lua-factory: Fix garbage after escaped text in grl.unescape()
Last modified: 2014-05-07 16:21:16 UTC
.
Created attachment 275981 [details] [review] lua-factory: Fix garbage after escaped text in grl.unescape() grl.unescape('"Look at Me"') would give back: "Look at Me"t Me" instead of: "Look at Me" Don't forget to terminate the copied string when we've unescaped.
Attachment 275981 [details] pushed as 6c7f503 - lua-factory: Fix garbage after escaped text in grl.unescape()