lua-factory: Fix garbage after escaped text in grl.unescape()

grl.unescape('&quot;Look at Me&quot;')
would give back:
"Look at Me"t Me&quot;
instead of:
"Look at Me"

Don't forget to terminate the copied string when we've unescaped.

https://bugzilla.gnome.org/show_bug.cgi?id=729649